--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-redux": "^7.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/runtime": "7.8.7",
-    "@react-native-community/eslint-config": "0.0.5",
-    "babel-jest": "24.9.0",
-    "eslint": "6.8.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.4",
-    "react-test-renderer": "16.9.0"
+    "@babel/core": "^7.8.3",
+    "@babel/runtime": "^7.8.3",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "@types/jest": "^24.9.1",
+    "@types/react": "16.9.0",
+    "@types/react-native": "^0.60.31",
+    "@types/react-native-material-textfield": "^0.15.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-test-renderer": "16.9.0",
+    "@types/styled-components": "^4.4.2",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
+    "jetifier": "^1.6.4",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "16.9.0",
+    "typescript": "^3.7.5"
   },
   "jest": {
     "preset": "react-native"
