--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
@@ -30,6 +31,7 @@
     "@types/react": "16.9.0",
     "@types/react-native": "^0.60.31",
     "@types/react-native-material-textfield": "^0.15.0",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "16.9.0",
     "@types/styled-components": "^4.4.2",
