--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ui-kitten/components": "^4.4.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-communications": "^2.2.1",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
