--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,5 +57,9 @@
   },
   "exclude": [
     "node_modules", "babel.config.js", "metro.config.js", "jest.config.js"
+  ],
+
+  "include": [
+    "decs.d.ts"
   ]
 }
