--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.2.1",
     "@ui-kitten/components": "^4.4.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-appearance": "^0.3.3",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-modals": "^0.19.9",
     "react-native-reanimated": "^1.7.0",
