--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-svg": "^12.0.3",
+    "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
