--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.4.0",
-    "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/async-storage": "^2.0.0-rc.2",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
