--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'lost' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'Firebase/Analytics'
+
   target 'lostTests' do
     inherit! :search_paths
     # Pods for testing
