--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.2.1",
     "@ui-kitten/components": "^4.4.1",
+    "firebase": "^7.12.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-appearance": "^0.3.3",
