Add Google Login

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,7 @@ target 'lost' do
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   pod 'Firebase/Analytics'
+  pod 'GoogleSignIn', '~> 5.0.2'
 
   target 'lostTests' do
     inherit! :search_paths
