--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@eva-design/eva": "^1.4.0",
     "@react-native-community/async-storage": "^2.0.0-rc.2",
+    "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-firebase/app": "^7.1.0",
+    "@react-native-firebase/auth": "^7.1.0",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.2.1",
