add startup login and patient code connection system

--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.4.0",
-    "@react-native-community/async-storage": "^2.0.0-rc.2",
+    "@react-native-community/async-storage": "^2.0.0-rc.3",
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.7",
-    "@react-native-firebase/app": "^7.1.0",
-    "@react-native-firebase/auth": "^7.1.0",
+    "@react-native-firebase/app": "^7.2.1",
+    "@react-native-firebase/auth": "^8.0.5",
+    "@react-native-firebase/database": "^7.2.2",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
-    "@react-navigation/stack": "^5.2.1",
+    "@react-navigation/stack": "^5.5.1",
     "@ui-kitten/components": "^4.4.1",
-    "firebase": "^7.12.0",
+    "firebase": "^7.15.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-appearance": "^0.3.3",
+    "react-native-base64": "0.0.2",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-modals": "^0.19.9",
     "react-native-reanimated": "^1.7.0",
@@ -49,7 +51,7 @@
     "@types/styled-components": "^4.4.2",
     "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
-    "jetifier": "^1.6.4",
+    "jetifier": "^1.6.6",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0",
     "typescript": "^3.7.5"
