--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.5.1",
     "@ui-kitten/components": "^4.4.1",
-    "firebase": "^7.15.1",
+    "firebase": "^7.24.0",
     "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react-native": "^0.63.3",
     "react-native-appearance": "^0.3.3",
     "react-native-base64": "0.0.2",
     "react-native-gesture-handler": "^1.6.0",
